build.log

> Task :compileJava FAILED
D:\IdeaProjects\stock-pos\stock-pos-api\src\main\java\com\example\stockpos\app\service\impl\CategoryServiceImpl.java:17: error: CategoryServiceImpl is not abstract and does not override abstract method delete(IdRequest) in CategoryService
public class CategoryServiceImpl implements CategoryService {
       ^
Note: D:\IdeaProjects\stock-pos\stock-pos-api\src\main\java\com\example\stockpos\app\config\jwt\JwtAuthenticationFilter.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

[Incubating] Problems report is available at: file:///D:/IdeaProjects/stock-pos/stock-pos-api/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: D:\IdeaProjects\stock-pos\stock-pos-api\src\main\java\com\example\stockpos\app\config\jwt\JwtAuthenticationFilter.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  D:\IdeaProjects\stock-pos\stock-pos-api\src\main\java\com\example\stockpos\app\service\impl\CategoryServiceImpl.java:17: error: CategoryServiceImpl is not abstract and does not override abstract method delete(IdRequest) in CategoryService
  public class CategoryServiceImpl implements CategoryService {
         ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 3s
1 actionable task: 1 executed
